--- a/src/main/frontend/src/admin/css/AdminLogin.css
+++ b/src/main/frontend/src/admin/css/AdminLogin.css
@@ -1,12 +1,9 @@
 body {
-    font-family: 'Arial', sans-serif;
     background-color: #ffffff;
-    margin: 0;
-    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    padding: 100px;
 }
 
 /* 로그인 폼 전체를 감싸는 div */
