--- a/src/main/frontend/src/admin/css/AdminMain.css
+++ b/src/main/frontend/src/admin/css/AdminMain.css
@@ -5,11 +5,9 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     background-color: #ffffff;
 }
 
@@ -20,6 +18,7 @@ body {
 .admin-title {
     font-size: 2rem;
     font-weight: bold;
+    margin-top: 20px;
     margin-bottom: 20px;
 }
 
@@ -29,6 +28,7 @@ body {
     border: 1px solid #000;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
 }
 
 .info-box p {
