--- a/src/main/frontend/src/global/Footer.css
+++ b/src/main/frontend/src/global/Footer.css
@@ -4,6 +4,7 @@
     text-align: center;
     padding: 1px 0;
     width: 100%;
-    margin-top: auto;
+    position : absolute;
+    bottom : 0;
   }
   
