코스게시판관리, 회원정보조회

--- a/src/main/frontend/src/admin/css/AdminMain.css
+++ b/src/main/frontend/src/admin/css/AdminMain.css
@@ -5,6 +5,7 @@
 .admin-title {
     font-size: 2rem;
     font-weight: bold;
+    text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
 }
