--- a/src/main/frontend/src/global/header/Header.css
+++ b/src/main/frontend/src/global/header/Header.css
@@ -4,6 +4,7 @@
     padding: 20px 0;
     height: 140px;
     position: relative;
+    top:0;
   }
   
   .logo-container {
@@ -24,6 +25,7 @@
     padding: 0;
     margin: 0;
     justify-content: center;
+    background: #003B54;
   }
   
   .menu-item {
@@ -68,6 +70,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    background: #003B54;
   }
   
   .search-icon {
