--- a/src/main/frontend/src/admin/css/UserManagement.css
+++ b/src/main/frontend/src/admin/css/UserManagement.css
@@ -1,66 +1,34 @@
-  .container {
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  h1 {
-    text-align: left;
-    margin-bottom: 20px;
-  }
-  
-  .search-container {
+ .search-user {
     display: flex;
+    align-items: flex-start;
     justify-content: space-between;
-    margin-bottom: 5px;
   }
-  
-  .search-container input, .search-container button {
-    padding: 5px;
+   
+  .search-user input {
+    padding: 10px;
+    margin-right: 20px;
+    height: 40px;
+  }
+
+  .search-user p {
+    width: 50px;
+  }
+
+  .search-user input[type="date"] {
+    margin-right: 20px;
+    width: 200px;
+    height: 20px;
+  }
+
+
+  .search-user input[type="text"] {
+    width: 500px;
     margin-right: 20px;
   }
 
-  
-  .delete-button {
-    padding: 10px 20px;
-    width: 100px;
-    background-color: #1b257c;
-    color: white;
-    border: none;
-    cursor: pointer;
-    margin-bottom: 20px;    
-  }
-
-  table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  table, th, td {
-    border: 1px solid #ccc;
-  }
-  
-  th, td {
-    padding: 10px;
-    text-align: center;
-  }
-  
-  thead {
-    background-color: #f5f5f5;
-  }
-  
-  .pagination {
-    margin-top: 10px;
-    text-align: center;
-  }
-  
-  .pagination span {
-    margin: 0 5px;
-    padding: 5px 10px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-  }
-  
-  .pagination span:hover {
-    background-color: #ddd;
+  .search-user button {
+    padding: 5px;
+    margin-right: 20px;
+    width: 200px;
+    height: 45px;
   }
