--- a/src/main/frontend/src/global/footer/Footer.css
+++ b/src/main/frontend/src/global/footer/Footer.css
@@ -4,7 +4,7 @@
     text-align: center;
     padding: 1px 0;
     width: 100%;
-    position:relative;
+    position:absolute;
     bottom:0;
   }
   
