--- a/src/main/frontend/src/user/css/LoginMain.css
+++ b/src/main/frontend/src/user/css/LoginMain.css
@@ -1,24 +1,114 @@
+li{
+    list-style:none;
+}
+a{
+    color: inherit;
+    text-decoration: none;
+}
 .content{
     width: 100%;
-    weight : 850px;
+    height : 500px;
     margin: 0 auto;
     padding: 0;
 }
 .login_wrap{
-    width : 50%;
-    weight: 800px;
+    width : 40%;
+    min-width:500px;
+    height: 100%;
+    min-height: 500px;
     margin:0 auto;
     position : relative;
     top:25px;
     bottom:25px;
 }
-.panel_item{
-    list-style:none;
+
+.menu_wrap{
+    margin-bottom: 0;
+    display:table;
+    table-layout: fixed;
+    position: relative;
+    width:100%;
+    height: 10%;
+    border-collapse: collapse;
+    border-radius : 12px 12px 0px 0px;
+    border-style : hidden;
+    box-shadow : 0 0 0 1px black;
+}
+
+.menu_item{
+    position: relative;
+    display: table-cell;
+    vertical-align: middle;
+    border: 1px solid;
+    text-align: center;
+}
+
+.fm_login{
+    height: 80%;
+}
+
+.panel_wrap{
+    height: 100%;
+    margin:0;
+    padding:0;
+    border-top:0;
 }
 
 .panel_item{
-    border : 1px solid black;
-    background-color: #ffffff;
-    border-radius: 12px;
+    height: 100%;
+    border-top:0;
+    border-radius: 0px 0px 12px 12px;
+    border-style : hidden;
+    box-shadow : -1px 0 0 0 black ,1px 0 0 0 black, 0 1px 0 0 black;
 
+}
+.panel_inner{
+    height: 100%;
+    position: relative;
+}
+
+.login_form_box{
+    position:absolute;
+    left:7.5%;
+    right:7.5%;
+    top:10%;
+    width:85%;
+}
+
+.login_box{
+    padding: 10px;
+}
+
+.input_item_id{
+    padding: 5px 0px 0px 5px;
+}
+
+.input_item_id > input{
+    height: 50px;
+}
+
+/* 위치 재배치 중*/
+.find_wrap{
+    position: absolute;
+    width:100%;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+}
+.find_wrap>li{
+    margin: 0;
+    padding: 0 10px 0 10px;
+    float: left;
+}
+
+.btn_login_wrap{
+    width:75%;
+    margin: auto;
+    position:absolute;
+    bottom: 10%;
+    left: 12.5%;
+}
+
+.btn_login_wrap > button{
+    height: 50px;
 }
