--- a/src/main/frontend/src/user/css/LoginMain.css
+++ b/src/main/frontend/src/user/css/LoginMain.css
@@ -30,7 +30,7 @@ a{
     width:100%;
     height: 10%;
     border-collapse: collapse;
-    border-radius : 12px 12px 0px 0px;
+    border-radius : 12px 12px 0 0;
     border-style : hidden;
     box-shadow : 0 0 0 1px black;
 }
@@ -57,7 +57,7 @@ a{
 .panel_item{
     height: 100%;
     border-top:0;
-    border-radius: 0px 0px 12px 12px;
+    border-radius: 0 0 12px 12px;
     border-style : hidden;
     box-shadow : -1px 0 0 0 black ,1px 0 0 0 black, 0 1px 0 0 black;
 
@@ -80,11 +80,23 @@ a{
 }
 
 .input_item_id{
-    padding: 5px 0px 0px 5px;
+    padding: 5px 0 0 5px;
 }
 
 .input_item_id > input{
-    height: 50px;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 0;
+    border: 1px solid;
+    border-radius: 4px;
+    font-size: 16px;
+    box-sizing: border-box;
+    height: 55px;
+}
+
+.input_item_id > input:focus{
+    outline: none;
+    background: lightsteelblue;
 }
 
 .find_wrap{
