--- a/src/main/frontend/src/global/footer/Footer.css
+++ b/src/main/frontend/src/global/footer/Footer.css
@@ -4,7 +4,7 @@
   text-align: center;
   padding: 1px 0;
   width: 100%;
-  position: fixed; /* 화면에 고정 */
+  position: relative;
   bottom: 0;       /* 화면 하단에 고정 */
   left: 0;         /* 화면의 왼쪽 끝으로 고정 */
 }
