--- a/src/main/frontend/src/global/header/Header.css
+++ b/src/main/frontend/src/global/header/Header.css
@@ -10,8 +10,8 @@ body, html {
   min-width: 1200px;  /* 최소 너비 설정 */
 }
 
-.header  { 
-  position: relative; 
+.header {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,8 +20,21 @@ body, html {
   padding: 20px 0;
   min-height: 150px;
   height: 100%;
-  z-index: 1;  /* 다른 요소보다 앞에 배치 */
+  z-index: 1;
 }
+
+#google_translate_element {
+  position: absolute;
+  top: 20px; /* 헤더 안에서 고정 */
+  left: 15px;
+  background-color: #ffffff;
+  border: 10px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 2px 5px rgba(112, 105, 105, 0.2);
+  z-index: 3;
+}
+
 
 .logo {
   width: 130px;
@@ -100,7 +113,7 @@ body, html {
 
 .login-container {
   position: absolute;
-  right: 0px;
+  right: 30px;
   bottom: 20px;
   display: flex;
   align-items: center;
@@ -125,4 +138,9 @@ body, html {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+
+#google_translate_element {
+  position: 1000px;
 }
