--- a/src/main/frontend/src/global/search/search_page.css
+++ b/src/main/frontend/src/global/search/search_page.css
@@ -62,6 +62,7 @@
 /* 드롭다운 스타일 */
 .dropdown {
     margin-left: 10px; /* 검색 입력 박스와 간격 조정 */
+    margin-bottom: 20px;
     padding: 10px; /* 드롭다운 패딩 */
     border-radius: 5px; /* 드롭다운 모서리 둥글게 설정 */
     border: 1px solid #ccc; /* 드롭다운 테두리 설정 */
@@ -86,6 +87,7 @@
     cursor: pointer; /* 커서 스타일 */
     width: 80px; /* 원하는 가로 길이 설정 */
     margin-left: 10px; /* 드롭다운과의 간격 설정 */
+    margin-bottom: 17px;
 }
 
 /* 드롭다운 목록의 스타일 추가 */
