--- a/src/main/frontend/src/user/css/IdFind.css
+++ b/src/main/frontend/src/user/css/IdFind.css
@@ -1,9 +1,9 @@
 .content_find{
     width: 100%;
     height : 500px;
-    margin: 0 auto;
     padding: 0;
     position : relative;
+    margin-bottom: 50px;
 }
 
 .form_wrap{
@@ -34,7 +34,13 @@
     font-size: 20px;
 }
 
-.back_btn{
-    margin-left: 16%;
-    width: 350px;
+.content_find_id{
+    margin-bottom:50px;
+
+}
+
+.component_wrap>button{
+    width:30%;
+    display: grid;
+    place-items: center;
 }
