--- a/src/main/frontend/src/review/css/ReviewWrite.css
+++ b/src/main/frontend/src/review/css/ReviewWrite.css
@@ -12,6 +12,44 @@
     text-align: center;
   }
   
+
+  /* 임시저장 버튼 스타일 */ 
+  .review-save-btn {
+    position: relative;
+    width: 95px;
+    height: 40px;
+    transform: translateX(1690%);
+    background-color: #6b6b6b;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 13px; /* 글자 크기 조정 */
+    transition: background-color 0.3s;
+    margin-bottom: 20px;
+  }
+
+  /* 삭제 버튼 스타일 */
+  .review-cancel-btn {
+    position: relative;
+    width: 95px;
+    height: 40px;
+    transform: translateX(1700%);
+    background-color: #e98181;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 13px; /* 글자 크기 조정 */
+    transition: background-color 0.3s;
+    margin-bottom: 20px;
+  }
+
+  .review-save-btn:hover,
+  .review-cancel-btn:hover {
+    background-color: #ddd;
+  }
+
   .review-input-group {
     margin-bottom: 20px;
   }
