--- a/src/main/frontend/src/qna/css/QuestionAdd.css
+++ b/src/main/frontend/src/qna/css/QuestionAdd.css
@@ -29,6 +29,7 @@
     background-color: #007bff;
     color: white;
     border: none;
+    width: 10%;
     border-radius: 4px;
     cursor: pointer;
   }
