--- a/src/main/frontend/src/hotels/css/HotelsDetails.css
+++ b/src/main/frontend/src/hotels/css/HotelsDetails.css
@@ -29,10 +29,19 @@
 }
 
 .room-header h2 {
-    font-size: 1rem;
+    font-size: 1.3rem;
     color: #333;
     border-style:none;
     margin: 10px 0;
+}
+
+.hotel-room {
+    border-style: solid;
+    border-color: rgb(97, 97, 97);
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
   /* 객실 정보 항목 */
@@ -40,12 +49,9 @@
     display: flex;  /* Flexbox로 설정 */
     justify-content: space-between;  /* 각 p를 공간에 맞게 배치 */
     gap: 10px;  /* 각 p 사이에 간격 추가 */
-    border-style: solid;
-    border-color: rgb(97, 97, 97);
     padding: 15px;
     margin-bottom: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .room-info .room p {
@@ -86,4 +92,29 @@
     border: 0;
   }
   
-  
+  .room-card {
+    border-radius: 8px;
+    overflow: hidden;
+    display: flex; /* 플렉스 박스 설정 */
+    flex-direction: row; /* 가로 방향 정렬 */
+    justify-content: center; /* 가로 중앙 정렬 */
+    align-items: center; /* 세로 중앙 정렬 */
+    gap: 10px; /* 이미지 간격 추가 */
+    height: 170px; /* 컨테이너 높이 설정 (필요시 수정) */
+}
+
+.room-image {
+    width: 170px; /* 이미지 너비 */
+    height: 170px; /* 이미지 높이 */
+    object-fit: cover; /* 이미지 비율 유지 */
+    padding: 10px;
+}
+
+.thum-img img {
+    background-color: #ffffff;
+    margin-top: 20px;
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+    border: 0;
+}
