어드민 페이지 - 메인에 현재 회원 수 출력, 회원 정보 조회(이름으로 조회 가능)

--- a/src/main/frontend/src/admin/css/UserManagement.css
+++ b/src/main/frontend/src/admin/css/UserManagement.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    padding: 10px;
   }
    
   .search-user input {
@@ -12,12 +13,6 @@
 
   .search-user p {
     width: 50px;
-  }
-
-  .search-user input[type="date"] {
-    margin-right: 20px;
-    width: 200px;
-    height: 20px;
   }
 
 
@@ -32,3 +27,5 @@
     width: 200px;
     height: 45px;
   }
+
+  
