--- a/src/main/frontend/src/global/search/search_page.css
+++ b/src/main/frontend/src/global/search/search_page.css
@@ -136,7 +136,15 @@
     border-radius: 5px; /* 모서리 둥글게 설정 */
     overflow: hidden; /* 오버플로우 숨기기 */
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1); /* 그림자 추가 */
+    transition: background-color 0.3s ease, box-shadow 0.3s ease; /* 부드러운 전환 효과 */
 }
+
+/* 마우스 오버 시 파란색 배경과 그림자 효과 추가 */
+.course-box-item:hover {
+    background-color: #f0f8ff; /* 연한 파란색 배경 */
+    box-shadow: 0 4px 8px rgba(0, 0, 255, 0.2); /* 파란색 그림자 효과 */
+}
+
 
 /* 이미지 영역 스타일 */
 .course-box {
@@ -144,7 +152,7 @@
 }
 
 /* 이미지 스타일 */
-.course-box img {
+.s_course-image {
     width: 100%; /* 이미지 너비 100%로 설정 */
     height: auto; /* 자동 높이 설정 */
     border-radius: 8px; /* 이미지 모서리를 둥글게 설정 */
