--- a/src/main/frontend/src/admin/css/QnaManagement.css
+++ b/src/main/frontend/src/admin/css/QnaManagement.css
@@ -1,33 +1,14 @@
 .search-qna {
     display: flex;
     align-items: stretch;
-    justify-content: space-between;
+    margin-bottom: 10px;
   }
    
-  .search-qna input[type="date"]{
-    padding: 5px;
-    margin-right: 20px;
-    width: 250px;
-    height: 30px;
-  }
 
   .search-qna input[type="text"] {
-    padding: 5px;
-    margin-right: 20px;
     width: 400px;
     height: 40px;
-  }
-
-  .search-qna input[type="date"]{
-    padding: 5px;
     margin-right: 20px;
-    width: 250px;
-    height: 30px;
-  }
-
-  .search-qna input[type="checkbox"]{
-    margin-right: 20px;
-    height: 30px;
   }
 
   .search-qna select {
@@ -35,13 +16,11 @@
     margin-right: 20px;
   }
 
-  .search-qna p {
-    width: 80px;
-  }
-
   .search-qna button {
     padding: 5px;
     margin-right: 20px;
     width: 200px;
     height: 43px;
+    background-color: white;
+    
   }
