--- a/src/main/frontend/src/festival/css/Festival.css
+++ b/src/main/frontend/src/festival/css/Festival.css
@@ -3,6 +3,7 @@
     flex-direction: column; /* 세로로 배치 */
     align-items: center;
     margin: 50px;
+    min-height: 500px;
 }
 
 .data_area {
@@ -27,6 +28,27 @@
     box-shadow: 0 8px 16px rgb(149, 198, 218);
 }
 
+/* 날짜 범위 선택 부분*/
+.date_filter {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 40px;
+}
+
+.date_filter label {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.date_filter input {
+    margin-left: 5px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+/* 이미지 및 제목 부분*/
 .img_wrap img {
     width: 100%;
     height: 150px;
@@ -73,4 +95,11 @@
 .pagination button:disabled {
     background-color: #e0e0e0;
     cursor: not-allowed;
+}
+/* 에러 메세지 */
+.error_message {
+    text-align: center;
+    color: red;
+    font-size: 18px;
+    margin: 50px 0;
 }
