--- a/src/main/frontend/src/user/css/PwFind.css
+++ b/src/main/frontend/src/user/css/PwFind.css
@@ -1,43 +1,48 @@
-.content_find_pw_main{
-    width: 100%;
-    height : 300px;
+.content_find_pw_main {
+    width: 70%;
+    min-height: 100px;
     margin: 0 auto;
-    padding: 0;
-    position : relative;
-
+    padding: 50px;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
 }
 
-.form_find_pw{
-    width : 500px;
+.form_find_pw {
+    width: 500px;
     height: 200px;
-    position : relative;
-    top:30%;
-    margin: 0 auto;
-    border:2px solid midnightblue;
+    border: 2px solid midnightblue;
     border-radius: 4px;
     text-align: center;
     align-content: center;
     margin-bottom: 50px;
+    display: flex; /* flexbox를 사용하여 내부 요소를 정렬 */
+    flex-direction: column; /* 입력폼과 버튼을 수직으로 정렬 */
+    justify-content: center; /* 입력폼과 버튼을 수직으로 가운데 정렬 */
 }
 
-.list_wrap_pw{
+.list_wrap_pw {
     display: flex;
     position: relative;
-    margin-top:30px;
-    margin-bottom:30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
-.list_wrap_pw>p{
+
+.list_wrap_pw > p {
     width: 20%;
 }
-.list_wrap_pw>input{
-    width:75%;
-    border:2px solid steelblue;
+
+.list_wrap_pw > input {
+    width: 75%;
+    border: 2px solid steelblue;
     border-radius: 8px;
 }
 
-.content_find_pw_main>.btn_wrap{
+.content_find_pw_main > .btn_wrap {
     position: relative;
-    width:12.5%;
-    margin:0 auto;
-    top:30%;
+    width: 10%; /* 버튼을 입력폼 너비에 맞게 확장 */
+    margin-top: 20px; /* 버튼과 입력폼 사이의 간격을 추가 */
+    text-align: center; /* 버튼을 가운데 정렬 */
 }
