--- a/src/main/frontend/src/admin/css/UserManagement.css
+++ b/src/main/frontend/src/admin/css/UserManagement.css
@@ -15,9 +15,10 @@
 
 .search-user button {
   padding: 5px 10px;
-  background-color: #424e95;
+  background-color: #4a8fa5;
   color: white;
   border: none;
+  border-radius: 4px;
   width: 100px;
   cursor: pointer;
 }
