--- a/src/main/frontend/src/admin/css/UserManagement.css
+++ b/src/main/frontend/src/admin/css/UserManagement.css
@@ -10,6 +10,7 @@
 .search-user input[type="text"] {
   padding: 5px;
   font-size: 16px;
+  height: 40px;
   width: 400px;
 }
 
@@ -20,6 +21,7 @@
   border: none;
   border-radius: 4px;
   width: 100px;
+  height: 40px;
   cursor: pointer;
 }
 
