--- a/src/main/frontend/src/admin/css/CourseManagement.css
+++ b/src/main/frontend/src/admin/css/CourseManagement.css
@@ -31,5 +31,9 @@
     margin-right: 20px;
     width: 200px;
     height: 45px;
+    background-color: #4a8fa5;
+    color: white;
+    border: none;
+    border-radius: 4px;
   }
 
