--- a/src/main/frontend/src/admin/css/QnaManagement.css
+++ b/src/main/frontend/src/admin/css/QnaManagement.css
@@ -19,8 +19,19 @@
   .search-qna button {
     padding: 5px;
     margin-right: 20px;
-    width: 200px;
-    height: 43px;
-    background-color: white;
-    
+    width: 100px;
+    height: 40px;
+    background-color: #4a8fa5;
+    color: white;
+    border: none;
+    border-radius: 4px;
+  }
+
+  .answer-button {
+    width: 100%;
+    height: 50px;
+    background-color: #4a8fa5;
+    color: white;
+    border: none;
+    border-radius: 4px;
   }
