--- a/src/main/frontend/src/admin/css/ReviewManagement.css
+++ b/src/main/frontend/src/admin/css/ReviewManagement.css
@@ -1,14 +1,7 @@
   .search-review {
     display: flex;
     align-items: stretch;
-    justify-content: space-between;
-  }
-   
-  .search-review input[type="date"]{
-    padding: 5px;
-    margin-right: 20px;
-    width: 250px;
-    height: 30px;
+    margin-bottom: 10px;
   }
 
   .search-review input[type="text"] {
@@ -22,5 +15,9 @@
     padding: 5px;
     margin-right: 20px;
     width: 200px;
-    height: 43px;
+    height: 40px;
+    background-color: #4a8fa5;
+    color: white;
+    border: none;
+    border-radius: 4px;
   }
