--- a/src/main/frontend/src/user/css/LoginMain.css
+++ b/src/main/frontend/src/user/css/LoginMain.css
@@ -113,5 +113,12 @@ a {
 }
 
 .btn_login_wrap > button {
-    height: 50px;
+    width: 100%;
+    padding: 10px;
+    background-color: #4a8fa5;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
