--- a/src/main/frontend/src/admin/css/CourseManagement.css
+++ b/src/main/frontend/src/admin/css/CourseManagement.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: stretch;
     justify-content: space-between;
+    margin-bottom: 10px;
   }
    
   .search-course select {
