리뷰 수정 추가

--- a/src/main/frontend/src/review/css/ReviewDetails.css
+++ b/src/main/frontend/src/review/css/ReviewDetails.css
@@ -68,6 +68,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-right: 10px;
 }
 
 .review-detail-button button:hover {
